update task and others

--- a/src/com/secpro/platform/monitoring/process/services/SyslogStandardRuleServiceRes.properties
+++ b/src/com/secpro/platform/monitoring/process/services/SyslogStandardRuleServiceRes.properties
@@ -1,2 +1,5 @@
 startUp=Service started!
 stopped=Service stopped!
+loadStandardRule=load the typecode: {0} standard rules
+changeStandardRule=change the typecode: {0} standard rules
+removeStandardRule=remove the typecode: {0} standard rules
