bug fixes and others

--- a/src/com/secpro/platform/monitoring/process/services/FileStorageServiceRes.properties
+++ b/src/com/secpro/platform/monitoring/process/services/FileStorageServiceRes.properties
@@ -1,2 +1,3 @@
 startUp=Service started!
 stopped=Service stopped!
+fileStorageStart=the file storage thread start,storage file path: {0},file name: {1}
