--- a/src/com/secpro/platform/monitoring/process/services/MCAStatusMonitoringServiceRes.properties
+++ b/src/com/secpro/platform/monitoring/process/services/MCAStatusMonitoringServiceRes.properties
@@ -1,2 +1,3 @@
 startUp=Service started!
 stopped=Service stopped!
+mcaStatusMonitorStart=the MCA status monitoring thread start,intervalTime: {0},timeout: {1}
