--- a/src/com/secpro/platform/monitoring/process/services/ScanFWConfigurationFileServiceRes.properties
+++ b/src/com/secpro/platform/monitoring/process/services/ScanFWConfigurationFileServiceRes.properties
@@ -1,5 +1,6 @@
 startUp=Service started!
 stopped=Service stopped!
+scanFWFileStart=the scan FW configuration file thread start,intervalTime: {0},scan file path: {1},storage file path: {2}
 scanFilePathError=the scan file path: {0} does not exist or is not a directory
 fileNameError=the file name: {0} does not meet the requirements
 haveNotResID=the city code: {0} and target ip: {1} don't corresponding resource id
