--- a/src/com/secpro/platform/monitoring/process/services/SyslogHitPolicyServiceRes.properties
+++ b/src/com/secpro/platform/monitoring/process/services/SyslogHitPolicyServiceRes.properties
@@ -1,2 +1,3 @@
 startUp=Service started!
 stopped=Service stopped!
+syslogHitStart=the syslog hit FW policy info thread start,intervalTime: {0},syslog data format: {1},syslog hit match rule: {2}
