--- a/src/com/secpro/platform/monitoring/process/services/SyslogStandardRuleServiceRes.properties
+++ b/src/com/secpro/platform/monitoring/process/services/SyslogStandardRuleServiceRes.properties
@@ -1,5 +1,7 @@
 startUp=Service started!
 stopped=Service stopped!
+loadRule=load all standard rules
+loadDBMapping=load all data to DB mapping
 loadStandardRule=load the typecode: {0} standard rules
 changeStandardRule=change the typecode: {0} standard rules
 removeStandardRule=remove the typecode: {0} standard rules
